--- a/index.html
+++ b/index.html
@@ -1,83 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="icons.css">
     <title>LiridonQorraj Photography</title>
-</head>
+  </head>
 
-<body>
-    <div class="header">
-        <div class="header-container">
-            <div class="header-logo">
-                <img src="" alt="" id="logo">
-                <h1>LiridonQorraj <br> Photography</h1>
-            </div>
-            <div class="header-nav">
-                <ul>
-                    <li><a href="index.html">Liridon Qorraj Studio</a></li>
-                    <li><a href="kontakti.html">Kontakti</a></li>
-                    <li><a href="rrethmeje.html">Rreth Meje</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                </ul>
-            </div>
+  <body>
+    <header class="header">
+      <div class="header-container">
+        <div class="header-logo">
+          <img src="" alt="" id="logo" />
+          <h1>
+            LiridonQorraj <br />
+            Photography
+          </h1>
         </div>
-    </div>
-    <div class="body">
-        <div class="title">
-            <h1>LIRIDONQORRAJ PHOTOGRAPHY</h1>
+        <div class="header-nav">
+          <ul>
+            <li><a href="index.html">Liridon Qorraj Studio</a></li>
+            <li><a href="kontakti.html">Kontakti</a></li>
+            <li><a href="rrethmeje.html">Rreth Meje</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+          </ul>
         </div>
-        <div class="hero-slideshow-container">
-            <div class="slideshow-wrapper">
-              <div class="slides-container">
-                <div class="slide">
-                  <img id="image1" src="uploads/Butrint Imeri/IMGL8001.jpg" alt="Image 1">
-                </div>
-                <div class="slide">
-                  <img id="image2" src="uploads/Bleona/IMGL8979.jpg" alt="Image 2">
-                </div>
-                <div class="slide">
-                  <img id="image3" src="uploads/Butrin Imeri 2/IMG_7941.jpg" alt="Image 3">
-                </div>
-                <div class="slide">
-                  <img id="image4" src="uploads/Bikini 1/IMGL3958.jpg" alt="Image 4">
-                </div>
-                <div class="slide">
-                  <img id="image5" src="uploads/Diellza/IMGL5569.jpg" alt="Image 5">
-                </div>
-                <div class="slide">
-                  <img id="image6" src="uploads/Bleona/IMGL8979.jpg" alt="Image 6">
-                </div>
-                <div class="slide">
-                  <img id="image7" src="uploads/Bleona/IMGL8979.jpg" alt="Image 7">
-                </div>
-                <div class="slide">
-                  <img id="image8" src="uploads/Bleona/IMGL8979.jpg" alt="Image 8">
-                </div>
-                <div class="slide">
-                  <img id="image9" src="uploads/Bleona/IMGL8979.jpg" alt="Image 9">
-                </div>
-                <div class="slide">
-                  <img id="image10" src="uploads/Bleona/IMGL8979.jpg" alt="Image 10">
-                </div>
-              </div>
+      </div>
+    </header>
+    <main class="body">
+      <div class="title">
+        <h1>LIRIDONQORRAJ PHOTOGRAPHY</h1>
+      </div>
+      <div class="hero-slideshow-container">
+        <div class="slideshow-wrapper">
+          <div class="slides-container">
+            <div class="slide">
+              <img
+                id="image1"
+                src="uploads/Butrint Imeri/IMGL8001.jpg"
+                alt="Image 1"
+              />
+            </div>
+            <div class="slide">
+              <img
+                id="image2"
+                src="uploads/Bleona/IMGL8979.jpg"
+                alt="Image 2"
+              />
+            </div>
+            <div class="slide">
+              <img
+                id="image3"
+                src="uploads/Butrin Imeri 2/IMG_7941.jpg"
+                alt="Image 3"
+              />
+            </div>
+            <div class="slide">
+              <img
+                id="image4"
+                src="uploads/Bikini 1/IMGL3958.jpg"
+                alt="Image 4"
+              />
+            </div>
+            <div class="slide">
+              <img
+                id="image5"
+                src="uploads/Diellza/IMGL5569.jpg"
+                alt="Image 5"
+              />
+            </div>
+            <div class="slide">
+              <img
+                id="image6"
+                src="uploads/Bleona/IMGL8979.jpg"
+                alt="Image 6"
+              />
+            </div>
+            <div class="slide">
+              <img
+                id="image7"
+                src="uploads/Bleona/IMGL8979.jpg"
+                alt="Image 7"
+              />
+            </div>
+            <div class="slide">
+              <img
+                id="image8"
+                src="uploads/Bleona/IMGL8979.jpg"
+                alt="Image 8"
+              />
+            </div>
+            <div class="slide">
+              <img
+                id="image9"
+                src="uploads/Bleona/IMGL8979.jpg"
+                alt="Image 9"
+              />
+            </div>
+            <div class="slide">
+              <img
+                id="image10"
+                src="uploads/Bleona/IMGL8979.jpg"
+                alt="Image 10"
+              />
             </div>
           </div>
-          
-          <script src="slideshow.js"></script>
-
-        <div class="galeria-text">
-            <div class="below-hr-galeria">
-                <p><strong> Studio Profesionale </strong></p>
-            </div>
-            <hr>
-            <div class="under-hr-galeria">
-                <p><a href="" class="services-link">TE GJITHA SHERBIMET</a></p>
-                <p>KREATIVITET MAKSIMAL</p>
-            </div>
         </div>
-    </div>
-</body>
+      </div>
+
+      <script src="slideshow.js"></script>
+
+      <div class="galeria-text-container">
+        <div class="galeria-text">
+          <div class="below-hr-galeria">
+            <p><strong> Studio Profesionale </strong></p>
+          </div>
+          <hr />
+          <div class="under-hr-galeria">
+            <p><a href="" class="services-link">TE GJITHA SHERBIMET</a></p>
+            <p>KREATIVITET MAKSIMAL</p>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="left-side-footer">
+        <img src="uploads/LQ-Logo.jpeg" alt="">
+        <h1>LiridonQorraj <br> Photography</h1>
+      </div>
+      <div class="right-side-footer">
+        <ul>
+          <li class="icons-footer bounce"><i class="fab fa-facebook-f bounce icon"></i><a href="https://www.facebook.com/Liridon.qorrajphotos?mibextid=LQQJ4d">LiridonQorrajPhotography</a></li>
+          <li class="icons-footer bounce"><i class="fab fa-instagram bounce icon"></i><a href="https://instagram.com/liridon.qorrajphotos?igshid=Y2I2MzMwZWM3ZA==">liridon.qorrajphotos</a></li>
+          <li class="icons-footer bounce"><i class="fab fa-tiktok bounce icon"></i><a href="https://www.tiktok.com/@liridonqorraj?_t=8dReopt03pG&_r=1">@liridonqorraj</a></li>
+          <li class="icons-footer bounce"><i class="fab fa-snapchat-ghost bounce icon"></i><a href="https://t.snapchat.com/GkZvjrh5">@liridonqorrajj</a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
