--- a/kontakti.html
+++ b/kontakti.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="kontakti.css">
-    
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="icons.css">
     <title>Kontakti</title>
 </head>
 <body>
@@ -36,10 +36,10 @@
                 <div class="contact-info">
                     <ul>
                         <li>Per gjdo rezervim kontaktoni ne njeren nga opsionet me poshtë.</li>
-                        <li><i class="fa fa-facebook"></i>&nbsp;&nbsp;<a href=""> Liridon Qorraj </a></li>
-                        <li><i class="fa fa-instagram"></i>&nbsp;&nbsp;<a href=""> Liridon Qorraj </a></li>
-                        <li><i class="fa fa-phone"></i>&nbsp;&nbsp;<a href=""> +383 49 237 224 </a></li>
-                        <li><i class="fa fa-google"></i>&nbsp;&nbsp;<a href=""> liridonqorraj@gmail.com </a></li>
+                        <li><i class="fab fa-facebook-f bounce icon"></i>&nbsp;&nbsp;<a href=""> Liridon Qorraj </a></li>
+                        <li><i class="fab fa-instagram bounce icon"></i>&nbsp;&nbsp;<a href=""> Liridon Qorraj </a></li>
+                        <li><i class="fas fa-phone bounce icon"></i>&nbsp;&nbsp;<a href=""> +383 49 237 224 </a></li>
+                        <li><i class="fab fa-google bounce icon"></i>&nbsp;&nbsp;<a href=""> liridonqorraj@gmail.com </a></li>
                     </ul>
                 </div>
             </div>
@@ -50,5 +50,20 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.10/pixi.min.js"></script>
   <script src="kontakt-pixi.js"></script>
+
+  <footer class="footer">
+    <div class="left-side-footer">
+      <img src="uploads/LQ-Logo.jpeg" alt="">
+      <h1>LiridonQorraj <br> Photography</h1>
+    </div>
+    <div class="right-side-footer">
+      <ul>
+        <li class="icons-footer bounce"><i class="fab fa-facebook-f bounce icon"></i><a href="https://www.facebook.com/Liridon.qorrajphotos?mibextid=LQQJ4d">LiridonQorrajPhotography</a></li>
+        <li class="icons-footer bounce"><i class="fab fa-instagram bounce icon"></i><a href="https://instagram.com/liridon.qorrajphotos?igshid=Y2I2MzMwZWM3ZA==">liridon.qorrajphotos</a></li>
+        <li class="icons-footer bounce"><i class="fab fa-tiktok bounce icon"></i><a href="https://www.tiktok.com/@liridonqorraj?_t=8dReopt03pG&_r=1">@liridonqorraj</a></li>
+        <li class="icons-footer bounce"><i class="fab fa-snapchat-ghost bounce icon"></i><a href="https://t.snapchat.com/GkZvjrh5">@liridonqorrajj</a></li>
+      </ul>
+    </div>
+</footer>
 </body>
 </html>
