--- a/rrethmeje.html
+++ b/rrethmeje.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="rrethmeje.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="icons.css">
     <title>Rreth Meje</title>
 </head>
 <body>
@@ -26,14 +28,12 @@
         </div>
     </header>
  
-	<section class="aboutSection" id="sectionAbout">
+	<main class="aboutSection" id="sectionAbout">
 		<div class="aboutContents">
 			
-
 			<div class="aboutImage">
 				<img src="uploads/LiridonQorraj.jpg">
 			</div>
-
 
 			<div class="aboutInfo">
 				<h1>Rreth Meje</h1>
@@ -46,45 +46,53 @@
 					<div><span>Email:</span><span>liridonqorraj@gmail.com</span></div>
 					<div><span>Adresa:</span><span>Prishtina, 10000, Shefqet Shkupi, Prishtina Stars </span></div>
 				</div>
-				
 			</div>
 
+			<div class="aboutSkills">
+				<div class="skill">
+					<div class="subject">Hard Work</div>
+					<div class="progress_bar">
+						<div class="progress_line" value="93%" style="max-width: 93%"></div>
+					</div>
+				</div>
 
-<div class="aboutSkills">
-	
-<div class="skill">
-	<div class="subject">Hard Work</div>
-	<div class="progress_bar">
-		<div class="progress_line" value="93%" style="max-width: 93%"></div>
-	</div>
-</div>
+				<div class="skill">
+					<div class="subject">Web Designing</div>
+					<div class="progress_bar">
+						<div class="progress_line" value="86%" style="max-width: 86%"></div>
+					</div>
+				</div>
 
-<div class="skill">
-	<div class="subject">Web Designing</div>
-	<div class="progress_bar">
-		<div class="progress_line" value="86%" style="max-width: 86%"></div>
-	</div>
-</div>
+				<div class="skill">
+					<div class="subject">Creativity</div>
+					<div class="progress_bar">
+						<div class="progress_line" value="94%" style="max-width: 94%"></div>
+					</div>
+				</div>
 
-<div class="skill">
-	<div class="subject">Creativity</div>
-	<div class="progress_bar">
-		<div class="progress_line" value="94%" style="max-width: 94%"></div>
-	</div>
-</div>
-
-<div class="skill">
-	<div class="subject">Web Development</div>
-	<div class="progress_bar">
-		<div class="progress_line" value="76%" style="max-width: 76%"></div>
-	</div>
-</div>
-
-</div>
-
-
+				<div class="skill">
+					<div class="subject">Web Development</div>
+					<div class="progress_bar">
+						<div class="progress_line" value="76%" style="max-width: 76%"></div>
+					</div>
+				</div>
+			</div>
 		</div>
-	</section>
+	</main>
 
+	<footer class="footer">
+		<div class="left-side-footer">
+		  <img src="uploads/LQ-Logo.jpeg" alt="">
+		  <h1>LiridonQorraj <br> Photography</h1>
+		</div>
+		<div class="right-side-footer">
+		  <ul>
+			<li class="icons-footer bounce"><i class="fab fa-facebook-f bounce icon"></i><a href="https://www.facebook.com/Liridon.qorrajphotos?mibextid=LQQJ4d">LiridonQorrajPhotography</a></li>
+			<li class="icons-footer bounce"><i class="fab fa-instagram bounce icon"></i><a href="https://instagram.com/liridon.qorrajphotos?igshid=Y2I2MzMwZWM3ZA==">liridon.qorrajphotos</a></li>
+			<li class="icons-footer bounce"><i class="fab fa-tiktok bounce icon"></i><a href="https://www.tiktok.com/@liridonqorraj?_t=8dReopt03pG&_r=1">@liridonqorraj</a></li>
+			<li class="icons-footer bounce"><i class="fab fa-snapchat-ghost bounce icon"></i><a href="https://t.snapchat.com/GkZvjrh5">@liridonqorrajj</a></li>
+		  </ul>
+		</div>
+	</footer>
 </body>
 </html>
