--- a/index.html
+++ b/index.html
@@ -75,35 +75,35 @@
             <div class="slide">
               <img
                 id="image6"
-                src="uploads/Bleona/IMGL8979.jpg"
+                src="uploads/Qifti 2/IMGL6838.jpg"
                 alt="Image 6"
               />
             </div>
             <div class="slide">
               <img
                 id="image7"
-                src="uploads/Bleona/IMGL8979.jpg"
+                src="uploads/Qifti 5/IMGL1836.jpg"
                 alt="Image 7"
               />
             </div>
             <div class="slide">
               <img
                 id="image8"
-                src="uploads/Bleona/IMGL8979.jpg"
+                src="uploads/Butrin Imeri 3/IMGL7513.jpg"
                 alt="Image 8"
               />
             </div>
             <div class="slide">
               <img
                 id="image9"
-                src="uploads/Bleona/IMGL8979.jpg"
+                src="uploads/Erika/IMGL2842.jpg"
                 alt="Image 9"
               />
             </div>
             <div class="slide">
               <img
                 id="image10"
-                src="uploads/Bleona/IMGL8979.jpg"
+                src="uploads/Martini/IMGL4519.jpg"
                 alt="Image 10"
               />
             </div>
