little change in kontakt

--- a/kontakti.html
+++ b/kontakti.html
@@ -43,9 +43,10 @@
                     </ul>
                 </div>
             </div>
-            <div class="contact-photo">
+            
+          <!--  <div class="contact-photo">
                 <img src="uploads/LiridonQorraj.jpg" alt="Foto 1">
-            </div>
+            </div> -->
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.3.10/pixi.min.js"></script>
