--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <div class="below-hr-galeria">
             <p><strong> Studio Profesionale </strong></p>
           </div>
-          <hr />
+          <hr class="animated-hr"/>
           <div class="under-hr-galeria">
             <p><a href="" class="services-link">TE GJITHA SHERBIMET</a></p>
             <p>KREATIVITET MAKSIMAL</p>
