--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
 		</div>
 
 		<div class="gallery">
-			<img src="/uploads/Bleona/IMGL8979.jpg" class="image photoshoot" onclick="openModal('Bleona')">
+			<a href="bleona.html"><img src="/uploads/Bleona/IMGL8979.jpg" class="image photoshoot" > </a>
 			<img src="/uploads/Martini/IMGL4519.jpg" class="image advertisement" onclick="openModal('Martini')">
 			<img src="/uploads/Qifti 1/IMGL0314.jpg" class="image wedding">
 			<img src="/uploads/Butrint Imeri/IMGL8001.jpg" class="image photoshoot">
