martini and qiftett added

--- a/gallery.html
+++ b/gallery.html
@@ -38,8 +38,8 @@
 
 		<div class="gallery">
 			<a href="bleona.html"><img src="/uploads/Bleona/IMGL8979.jpg" class="image photoshoot" > </a>
-			<img src="/uploads/Martini/IMGL4519.jpg" class="image advertisement" onclick="openModal('Martini')">
-			<img src="/uploads/Qifti 1/IMGL0314.jpg" class="image wedding">
+			<a href="martini.html"><img src="/uploads/Martini/IMGL4519.jpg" class="image advertisement" > </a>
+			<a href="qiftet.html"><img src="/uploads/Qifti 1/IMGL0314.jpg" class="image wedding"> </a>
 			<img src="/uploads/Butrint Imeri/IMGL8001.jpg" class="image photoshoot">
 			<img src="/uploads/Marketi/CanonCamera2.jpeg" class="image advertisement">
 			<img src="/uploads/Qifti 2/IMGL6848.jpg" class="image wedding">
