some small changes

--- a/martini.html
+++ b/martini.html
@@ -39,11 +39,11 @@
             </div>
 			
             <div class="gallery">
-                <img src="/uploads/Martini/IMGL4496.jpg" class="image advertisement" >
-                <img src="/uploads/Martini/IMGL4490.jpg" class="image advertisement" >
-                <img src="/uploads/Martini/IMGL4519.jpg" class="image advertisement" >
-                <img src="/uploads/Martini/IMGL4541.jpg" class="image advertisement" >
-                <img src="/uploads/Martini/IMGL4584.jpg" class="image advertisement" >
+                <img src="/uploads/Martini/IMGL4496.jpg" class="image" >
+                <img src="/uploads/Martini/IMGL4490.jpg" class="image" >
+                <img src="/uploads/Martini/IMGL4519.jpg" class="image" >
+                <img src="/uploads/Martini/IMGL4541.jpg" class="image" >
+                <img src="/uploads/Martini/IMGL4584.jpg" class="image" >
             </div>
     
             <div id="myModal" class="modal">
