--- a/qiftet.html
+++ b/qiftet.html
@@ -39,12 +39,12 @@
             </div>
 			
             <div class="gallery">
-                <img src="/uploads/Qifti 1/IMGL0028.jpg" class="image wedding" >
-                <img src="/uploads/Qifti 10/IMGL9205.jpg" class="image wedding" >
-                <img src="/uploads/Qifti 3/IMGL0778.jpg" class="image wedding" >
-                <img src="/uploads/Qifti 4/IMG_8245.jpg" class="image wedding" >
-                <img src="/uploads/Qifti 3/IMGL0999.jpg" class="image wedding" >
-                <img src="/uploads/Qifti 5/IMGL1628.jpg" class="image wedding" >
+                <img src="/uploads/Qifti 1/IMGL0028.jpg" class="image" >
+                <img src="/uploads/Qifti 10/IMGL9205.jpg" class="image" >
+                <img src="/uploads/Qifti 3/IMGL0778.jpg" class="image" >
+                <img src="/uploads/Qifti 4/IMG_8245.jpg" class="image" >
+                <img src="/uploads/Qifti 3/IMGL0999.jpg" class="image" >
+                <img src="/uploads/Qifti 5/IMGL1628.jpg" class="image" >
             </div>
     
             <div id="myModal" class="modal">
