--- a/bleona.html
+++ b/bleona.html
@@ -39,12 +39,12 @@
             </div>
 			
             <div class="gallery">
-                <img src="/uploads/Bleona/IMGL8979.jpg" class="image photoshoot" > 
-                <img src="/uploads/Bleona/IMGL8952.jpg" class="image photoshoot" >
-                <img src="/uploads/Bleona/IMGL9121.jpg" class="image photoshoot">
-                <img src="/uploads/Bleona/IMGL8978.jpg" class="image photoshoot">
-                <img src="/uploads/Bleona/IMGL9010.jpg" class="image photoshoot">
-                <img src="/uploads/Bleona/IMGL9019.jpg" class="image photoshoot">
+                <img src="/uploads/Bleona/IMGL8979.jpg" class="image"> 
+                <img src="/uploads/Bleona/IMGL8952.jpg" class="image">
+                <img src="/uploads/Bleona/IMGL9121.jpg" class="image">
+                <img src="/uploads/Bleona/IMGL8978.jpg" class="image">
+                <img src="/uploads/Bleona/IMGL9010.jpg" class="image">
+                <img src="/uploads/Bleona/IMGL9019.jpg" class="image">
             </div>
     
             <div id="myModal" class="modal">
