maps and pixijs drag gallery added

--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
           </div>
         </div>
       </div>
+
+      <div id="map-container"></div>
+      <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+      <script src="maps.js"></script>
+
+      <div id="canvas-container"></div>
+
+      <script src="https://pixijs.download/v5.3.3/pixi.min.js"></script>
+      <script src="drag.js"></script>
     </main>
     <footer class="footer">
       <div class="left-side-footer">
